orgs/claim-core/force-app/main/default/objects/Agent_Registry__mdt/Agent_Registry__mdt.object-meta.xml
<CustomObject>
    <description>Registry of all MCP agent orgs and their endpoints. Adding a new agent org requires only a new record here — no code changes</description>
    <label>Agent Registry</label>
    <pluralLabel>Agent Registries</pluralLabel>
</CustomObject>