orgs/claim-core/force-app/main/default/objects/Agent_Registry__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this agent server is currently active and available for routing</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>