orgs/claim-core/force-app/main/default/objects/Agent_Registry__mdt/fields/Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id__c</fullName>
    <description>Agentforce Agent ID for headless API invocation</description>
    <label>Agent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>