orgs/claim-core/force-app/main/default/objects/Agent_Registry__mdt/fields/Auth_Type__c.field-meta.xml
<CustomField>
    <fullName>Auth_Type__c</fullName>
    <description>Authentication type: OAuth_Client_Credentials, JWT_Bearer or Named_Principal</description>
    <label>Auth Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>