orgs/claim-core/force-app/main/default/objects/Agent_Registry__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Human readable description of what this agent org does</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>