orgs/claim-core/force-app/main/default/objects/Agent_Registry__mdt/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <description>Base URL of the agent org e.g. https://estimator.my.salesforce.com</description>
    <label>Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>