orgs/claim-core/force-app/main/default/objects/Agent_Registry__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>API name of the Named Credential used to authenticate with this agent org</description>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>