orgs/claim-core/force-app/main/default/objects/Agent_Registry__mdt/fields/Timeout_MS__c.field-meta.xml
<CustomField>
    <fullName>Timeout_MS__c</fullName>
    <description>Maximum milliseconds to wait for a response from this agent org</description>
    <label>Timeout MS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>